--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,20 @@
+/*! Typo */
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
 html {
     box-sizing: border-box;
     font-size: 16px;
+    -webkit-animation: fadein 2s;
+    /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s;
+    /* Firefox < 16 */
+    -ms-animation: fadein 2s;
+    /* Internet Explorer */
+    -o-animation: fadein 2s;
+    /* Opera < 12.1 */
+    animation: fadein 2s;
+    scroll-behavior: smooth;
 }
 
 *,
@@ -39,17 +53,78 @@ a {
     color: #4b4b4b;
 }
 
-a:hover {
-    color: #000;
-}
 
-@font-face {
-    font-family: Roboto;
-    src: url("../assets/typo/Roboto/Roboto-Medium.ttf");
-}
+/* a:hover {
+    color: #000;
+} */
 
 body {
-    background-color: #fff;
+    height: 100vh;
+}
+
+.nav__logo {
+    font-size: 1.3em;
+    font-weight: 900;
+    font-family: 'Montserrat', sans-serif;
+    color: rgb(255, 255, 255);
+    margin: 0 1em;
+}
+
+.nav {
+    justify-content: space-around;
+    align-items: center;
+    background-color: whitesmoke;
+    background-image: radial-gradient(at 0px 100%, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 100%, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 100% 100%, rgb(3, 159, 244) 0px, rgba(0, 0, 0, 0) 50%);
+    background-color: rgba(30, 31, 40, 0.947);
+}
+
+.heading {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.title {
+    width: max-content;
+    color: rgb(3, 159, 244);
+    font-size: 7vw;
+    font-size: 2.25em;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 900;
+    letter-spacing: -1.5px;
+    line-height: 40px;
+}
+
+.title-name {
+    display: block;
+    width: max-content;
+    color: rgb(217, 226, 235);
+}
+
+.title-occupation {
+    display: block;
+    color: rgb(217, 226, 235);
+    margin-top: 0.3em;
+}
+
+.part1 {
+    background-image: radial-gradient(at 0px 0px, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 0px, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 100% 0px, rgb(3, 159, 244) 0px, rgba(0, 0, 0, 0) 50%);
+    background-color: rgba(30, 31, 40, 0.947);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 90vh;
+}
+
+.part2 {
+    background-image: radial-gradient(at 0px 0px, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 100%, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at -45% 80%, rgb(53, 93, 255) 0px, rgba(0, 0, 0, 0) 45%);
+    height: 500px;
+    background-color: rgba(30, 31, 40, 0.947);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
 }
 
@@ -58,7 +133,7 @@ body {
     justify-content: space-between;
     align-items: center;
     height: 6rem;
-    background-color: whitesmoke;
+    width: 100%;
 }
 
 .nav__container {
@@ -67,16 +142,17 @@ body {
 
 .nav__icon-menu {
     margin-right: 5%;
+    filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
+    cursor: pointer;
 }
 
 .nav__item {
-    color: #202C59;
-    color: #296575;
+    color: rgb(255, 255, 255);
     transition: all 0.2s ease-in-out;
 }
 
 .nav__item:hover {
-    color: #F18805;
+    color: rgb(3, 159, 244);
     transition: all 0.2s ease-in-out;
 }
 
@@ -89,6 +165,127 @@ body {
     height: 100%;
 }
 
+.curriculum {
+    padding: 1em;
+    border-radius: 4px;
+    display: inline-block;
+    font-size: 1em;
+    font-family: 'Montserrat', sans-serif;
+    color: rgb(217, 226, 235);
+    background-color: rgb(3, 159, 244);
+    width: max-content;
+    box-shadow: 2px 5px 0px 2px rgba(3, 159, 244, 0.575);
+    transition: all 0.5s ease-in-out;
+    height: max-content;
+    align-self: flex-end;
+}
+
+.curriculum:hover {
+    background-color: rgba(30, 31, 40, 0.947);
+    color: rgb(217, 226, 235);
+    border: 2px solid rgb(3, 159, 244);
+    transform: translateY(-0.3em);
+    transition: all 0.5s ease-in-out;
+}
+
+.container-curriculum {
+    width: max-content;
+    height: 15%;
+    display: flex;
+    align-self: center;
+}
+
+.profile-image {
+    width: 75%;
+    height: 90%;
+    border-radius: 50%;
+    box-shadow: 18px 15px 51px 12px rgba(30, 31, 40, 0.947);
+    border: medium solid radial-gradient(at 100% 100%, rgb(3, 159, 244) 0px, rgb(34, 40, 107) 50%);
+}
+
+.aside-profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 450px;
+}
+
+.border-gradient {
+    border: 10px solid;
+    border-image-slice: 1;
+    border-width: 3px;
+}
+
+.border-gradient-purple {
+    border-image-source: linear-gradient(to left, transparent, transparent);
+}
+
+p {
+    display: flex;
+    width: 80%;
+    font-family: 'Montserrat', sans-serif;
+    color: rgb(217, 226, 235);
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
+/* Firefox < 16 */
+
+@-moz-keyframes fadein {
+    from {
+        opacity: 0;
+        transform: translateX(50%), translateY(50%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0%), translateY(0%);
+    }
+}
+
+
+/* Safari, Chrome and Opera > 12.1 */
+
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
+/* Internet Explorer */
+
+@-ms-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
+/* Opera < 12.1 */
+
+@-o-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 @media only screen and (min-width:700px) {
     .nav__icon-menu {
         display: none;
@@ -96,12 +293,100 @@ body {
     .nav__container {
         display: flex;
         width: 50%;
-        justify-content: space-evenly;
-        font-family: Roboto;
+        justify-content: space-around;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 700;
+        font-size: 20px;
     }
     .nav {
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         background-color: whitesmoke;
+        background-image: radial-gradient(at 0px 100%, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 100%, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 100% 100%, rgb(3, 159, 244) 0px, rgba(0, 0, 0, 0) 50%);
+        background-color: rgba(30, 31, 40, 0.947);
+        height: 7rem;
+    }
+    .part1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        height: 90vh;
+    }
+    .part2 {
+        height: 100vh;
+    }
+    .profile-image {
+        /* height: 300px; */
+        /* width: 15rem; */
+        width: 100%;
+        height: 70%;
+        border-radius: 50%;
+        box-shadow: 18px 15px 51px 12px rgba(30, 31, 40, 0.947);
+        border: medium solid radial-gradient(at 100% 100%, rgb(3, 159, 244) 0px, rgb(34, 40, 107) 50%);
+    }
+    .aside-profile {
+        display: flex;
+        justify-content: center;
+        height: 450px;
+    }
+    .border-gradient {
+        border: 10px solid;
+        border-image-slice: 1;
+        border-width: 3px;
+    }
+    .border-gradient-purple {
+        border-image-source: linear-gradient(to left, transparent, transparent);
+    }
+    .nav__logo {
+        font-size: 2em;
+        font-weight: 900;
+        font-family: 'Montserrat', sans-serif;
+        color: rgb(255, 255, 255);
+    }
+    .title {
+        width: max-content;
+        color: rgb(3, 159, 244);
+        font-size: 3.75em;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 900;
+        letter-spacing: -1.5px;
+        line-height: 60px;
+    }
+    .title-name {
+        display: block;
+        width: max-content;
+        color: rgb(217, 226, 235);
+    }
+    .heading {
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        position: relative;
+    }
+    .title-occupation {
+        display: block;
+        color: rgb(217, 226, 235);
+        margin-top: 0.3em;
+    }
+    .curriculum {
+        padding: 1em;
+        border-radius: 4px;
+        display: inline-block;
+        font-size: 1em;
+        font-family: 'Montserrat', sans-serif;
+        color: rgb(217, 226, 235);
+        background-color: rgb(3, 159, 244);
+        width: max-content;
+        /* align-self: center; */
+        z-index: 1;
+        box-shadow: 2px 5px 0px 2px rgba(3, 159, 244, 0.575);
+        transition: all 0.5s ease-in-out;
+        height: max-content;
+        align-self: flex-end;
+    }
+    .container-curriculum {
+        align-self: flex-start;
     }
 }
