--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*! Typo */
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap');
 html {
     box-sizing: border-box;
     font-size: 16px;
@@ -59,7 +59,16 @@ a {
 } */
 
 body {
-    height: 100vh;
+    min-height: 100vh;
+}
+
+header {
+    position: sticky;
+    top: 0rem;
+    background-color: whitesmoke;
+    background-image: radial-gradient(at 0px 100%, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 100%, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 100% 100%, rgb(3, 159, 244) 0px, rgba(0, 0, 0, 0) 50%);
+    background-color: rgba(30, 31, 40, 0.947);
+    /* margin-bottom: 7rem; */
 }
 
 .nav__logo {
@@ -73,9 +82,6 @@ body {
 .nav {
     justify-content: space-around;
     align-items: center;
-    background-color: whitesmoke;
-    background-image: radial-gradient(at 0px 100%, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 100%, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 100% 100%, rgb(3, 159, 244) 0px, rgba(0, 0, 0, 0) 50%);
-    background-color: rgba(30, 31, 40, 0.947);
 }
 
 .heading {
@@ -90,8 +96,8 @@ body {
     flex-direction: column;
     width: max-content;
     color: rgb(3, 159, 244);
-    font-size: 7vw;
     font-size: 2.25em;
+    font-size: 7vw;
     font-family: 'Raleway', sans-serif;
     font-weight: 900;
     letter-spacing: -1.5px;
@@ -110,7 +116,7 @@ body {
     margin-top: 0.3em;
 }
 
-.part1 {
+.section1 {
     background-image: radial-gradient(at 0px 0px, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 0px, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 100% 0px, rgb(3, 159, 244) 0px, rgba(0, 0, 0, 0) 50%);
     background-color: rgba(30, 31, 40, 0.947);
     display: flex;
@@ -118,15 +124,17 @@ body {
     justify-content: space-around;
     align-items: center;
     height: 90vh;
+    /* scroll-margin-top: 8rem; */
 }
 
-.part2 {
+.section2 {
     background-image: radial-gradient(at 0px 0px, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 100%, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at -45% 80%, rgb(53, 93, 255) 0px, rgba(0, 0, 0, 0) 45%);
-    height: 500px;
+    height: 100vh;
     background-color: rgba(30, 31, 40, 0.947);
     display: flex;
     justify-content: center;
     align-items: center;
+    /* scroll-margin-top: 8rem; */
     /* height: 100vh; */
 }
 
@@ -209,7 +217,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: thin solid red; */
     height: 60%;
     width: 40%;
 }
@@ -291,6 +298,17 @@ p {
 }
 
 @media only screen and (min-width:700px) {
+    body {
+        min-height: 100vh;
+    }
+    header {
+        position: sticky;
+        top: 0;
+        z-index: 3;
+        background-image: radial-gradient(at 0px 100%, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 100%, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 100% 100%, rgb(3, 159, 244) 0px, rgba(0, 0, 0, 0) 50%);
+        background-color: rgba(30, 31, 40, 0.947);
+        /* height: 7rem; */
+    }
     .nav__icon-menu {
         display: none;
     }
@@ -305,34 +323,48 @@ p {
     .nav {
         justify-content: space-around;
         align-items: center;
-        background-color: whitesmoke;
-        background-image: radial-gradient(at 0px 100%, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 100%, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 100% 100%, rgb(3, 159, 244) 0px, rgba(0, 0, 0, 0) 50%);
-        background-color: rgba(30, 31, 40, 0.947);
-        height: 7rem;
+        /* background-color: whitesmoke; */
     }
-    .part1 {
+    .section1 {
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+        flex-direction: column;
+        justify-content: space-evenly;
         align-items: center;
-        height: 90vh;
+        height: 89vh;
+        /* scroll-margin-top: 4rem; */
+        /* margin-top: 7rem; */
     }
-    .part2 {
-        height: 100vh;
+    .section2 {
+        height: 89vh;
+        scroll-margin-top: 6rem;
     }
     .profile-image {
-        width: 100%;
-        height: 70%;
         border-radius: 50%;
         box-shadow: 18px 15px 51px 12px rgba(30, 31, 40, 0.947);
         border: medium solid radial-gradient(at 100% 100%, rgb(3, 159, 244) 0px, rgb(34, 40, 107) 50%);
-        align-self: flex-start;
+        align-self: center;
+        align-self: center;
+        /* width: auto; */
+    }
+    .aside-container {
+        height: 20%;
+        width: 75%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        align-self: center;
+    }
+    .container-curriculum {
+        align-self: center;
+        width: 85%;
     }
     .aside-profile {
         display: flex;
-        justify-content: center;
-        height: 65%;
-        width: 25%;
+        height: min-content;
+        width: 27%;
+        align-self: center;
+        /* position: relative; */
+        /* bottom: 4rem; */
     }
     .border-gradient {
         border: 10px solid;
@@ -356,6 +388,7 @@ p {
         font-weight: 900;
         letter-spacing: -1.5px;
         line-height: 60px;
+        align-self: center;
     }
     .title-name {
         display: block;
@@ -363,11 +396,15 @@ p {
         color: rgb(217, 226, 235);
     }
     .heading {
-        height: 80%;
+        height: 60%;
+        height: min-content;
+        width: 100%;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        /* flex-direction: column; */
         justify-content: space-around;
-        position: relative;
+        /* position: relative; */
+        flex-wrap: wrap;
     }
     .title-occupation {
         display: block;
@@ -390,7 +427,156 @@ p {
         height: max-content;
         align-self: flex-end;
     }
-    .container-curriculum {
+    .paragraph-container {
+        display: flex;
+        flex-direction: column;
+        width: 85%;
+        justify-content: space-around;
+    }
+    .paragraph {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        font-size: 1.25em;
+        /* margin-left: 7rem; */
+    }
+    .paragraph-1 {
+        width: 50%;
+    }
+    .paragraph-2 {
+        width: 50%;
+    }
+    /*! About me style */
+    .section2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .section2__photo-container {
+        /* height: 200px; */
+        width: 100%;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+    }
+    .section2__photo {
+        width: 80%;
+        border-radius: inherit;
+    }
+    .section2__text-container {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 2rem;
+    }
+    .section2__title {
+        font-family: 'Raleway', sans-serif;
+        font-size: 2em;
+        color: rgb(3, 159, 244);
+        align-self: start;
+        padding: 0.5rem 0;
+    }
+    .section2__subtitle {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1em;
+        align-self: start;
+        color: rgb(255, 255, 255);
+        padding-bottom: 2rem;
+    }
+    .section2__paragraph {
+        color: rgb(217, 226, 235);
+        align-self: start;
+        padding: 2rem 0 4rem;
+    }
+    .section2__button {
+        width: max-content;
+        height: 40px;
+        display: flex;
         align-self: flex-start;
+    }
+    .section2__button a {
+        align-self: flex-start;
+        padding: 1em;
+        border-radius: 4px;
+        display: inline-block;
+        font-size: 1em;
+        font-family: 'Montserrat', sans-serif;
+        color: rgb(217, 226, 235);
+        background-color: rgb(3, 159, 244);
+        width: max-content;
+        box-shadow: 2px 5px 0px 2px rgba(3, 159, 244, 0.575);
+        transition: all 0.5s ease-in-out;
+    }
+    .section2__button a:hover {
+        background-color: rgba(30, 31, 40, 0.947);
+        color: rgb(217, 226, 235);
+        border: 2px solid rgb(3, 159, 244);
+        transform: translateY(-0.3em);
+        transition: all 0.5s ease-in-out;
+    }
+    /*! Services */
+    .section3 {
+        height: 89vh;
+        scroll-margin-top: 3rem;
+        background-image: radial-gradient(at 0px 0px, rgb(30, 31, 40) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at 50% 100%, rgb(34, 40, 107) 0px, rgba(0, 0, 0, 0) 50%), radial-gradient(at -45% 80%, rgb(53, 93, 255) 0px, rgba(0, 0, 0, 0) 45%);
+        height: 100vh;
+        background-color: rgba(30, 31, 40, 0.947);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .box-container {
+        padding: 1.5em;
+        width: 100%;
+    }
+    .boxes-container {
+        height: 85%;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        /* gap: 30px 30px; */
+    }
+    .box {
+        height: 45%;
+        width: 30%;
+        border: thin solid rgb(217, 226, 235);
+        border-radius: 4px;
+    }
+    .title-box {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+        font-size: 1.5em;
+        color: rgb(3, 159, 244);
+        margin-bottom: 1.2em;
+    }
+    .text-box-container {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
+    .number-box {
+        height: min-content;
+        font-family: 'Raleway', sans-serif;
+        font-size: 128px;
+        color: rgb(217, 226, 235);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .text-box {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1.1em;
+        padding: 0 20px;
+    }
+    /*! Projects */
+    .section4 {
+        height: 89vh;
+        scroll-margin-top: 6rem;
     }
 }
